--- a/cards/index.html
+++ b/cards/index.html
@@ -6,24 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="main.css">
+
   <title>Document</title>
 </head>
 
 <body>
   <textarea name="textarea" placeholder="Write stuff here" id="userText" rows="10" cols="50"></textarea>
   <button type="button" id="submitCard">Create</button>
-  <article class="card" id="card--1">
-    <div>Hey, I entered some text</div>
-    <div>
-      <button id="delete--1">Delete This Card</button>
-    </div>
-  </article>
-  <article class="card" id="card--2">
-    <div>Hey, I entered some text</div>
-    <div>
-      <button id="delete--2">Delete This Card</button>
-    </div>
-  </article>
+  <article id="cardSection"></article>
   <script src="cards.js"></script>
 </body>
 
